--- a/1Lab/app/src/main/res/values/strings.xml
+++ b/1Lab/app/src/main/res/values/strings.xml
@@ -19,6 +19,11 @@
     <string name="title_activity_sign_up">Sign Up</string>
     <string name="title_activity_welcome">Welcome</string>
     <string name="sign_in_incorrect">Incorrect email or password</string>
+    <string name="show_square">Square: %1$s</string>
+    <string name="show_detour_time">Detour time: %1$s</string>
+    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
+    <string name="loading_failed">LOADING FALED</string>
+    <string name="logout_text">Logout</string>
 
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
